--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@ USDT
 В данный момент мы частично приостановили выдачу Classic
 </p>
 <p>
-Подписка Full Nitro на месяц - 170 ₽
+Подписка Full Nitro на месяц - 395 ₽
 <br>
-Подписка Full Nitro на год - 1 500 ₽
+Подписка Full Nitro на год - 3 890 ₽
 <br>
-Подписка Classic Nitro на месяц - 100 ₽
+Подписка Classic Nitro на месяц - 100 ₽ (Стоп)
 <br>
 Подписка Classic Nitro на год - xxx ₽
 </p>
