--- a/index.html
+++ b/index.html
@@ -1,186 +1,1 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-<title>SchweppesNitro</title>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<script src="/cdn-cgi/apps/head/HgEkPdSixnSdgojCRjiPoKwDXoA.js"></script><link rel="stylesheet" href="assets/css/main.css" />
-<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-</head>
-<body class="is-preload">
-
-<div id="wrapper">
-
-<header id="header">
-<div class="content">
-<div class="inner">
-<h1>Schweppes Nitro</h1>
-<p>Шоп нитро с одними из самых низких цен. <br>мы гарантируем что никаких слётов не будет. <br> <a target="_blank" href="https://t.me/SchweppesNitro">Информация быстрее обновляется в нашем канале(там розыгрыш)</a></a>
-</div>
-</div>
-<nav>
-<ul>
-
-<li><a href="#other">Другое</a></li>
-<li><a href="#work">Покупка</a></li>
-<li><a href="#faq">FAQ</a></li>
-<li><a href="#bonus">Бонусы</a></li>
-<li><a href="#chanal">TG Канал</a></li>
-
-</ul>
-</nav>
-</header>
-
-<div id="main">
-
-<article id="bonus">
-<h2 class="major">Бонусы:</h2>
-<p>
-За каждого 7-ого приведённого друга вы получаете нитро от нас абсолютно бесплатно!
-</p>
-<p>
-У нас в канале будет разыгрывается каждые 25 сабов нитро
-</article>
-
-<article id="chanal">
-<h2 class="major">TG Канал:</h2>
-<p>
-Присооединяйся!
-</p>
-<p>
-<a href="https://t.me/SchweppesNitro"> @SchweppesNitro </a>
-</p>
-</article>
-
-<article id="other">
-<h2 class="major">ДРУГИЕ УСЛУГИ:</h2>
-<span class="image main"><img src="images/buy.png" alt="" /></span>
-<p>
-В данный момент мы временно приостановили смену региона Steam
-</p>
-<p>
-Смена региона Steam на Турцию - цена самой дешёвой игры + 150₽ (СТОП)
-</p>
-<p>
-Пополнение Турецкого аккаунта Steam:
-<br>
-40TL - 222₽
-<br>
-80TL - 394₽
-<br>
-200TL - 910₽
-<br>
-400TL - 1 770₽
-<br>
-800TL - 3 490₽
-<p>
-Способы оплаты:
-<br>
-Сбер
-<br>
-Тинькофф
-<br>
-Альфа
-<br>
-QIWI
-<br>
-СБП 
-<br>
-USDT
-</p>
-<p>
-Контакты для связи:
-</p>
-<p>
-Только по покупке - <a target="_blank" href="https://t.me/klefvf">klefvf</a>
-<br>
-Менеджер\Поддержка - <a target="_blank" href="https://t.me/IPinkles">Pinkles</a>
-<br>
-Поддержка - <a target="_blank" href="https://t.me/aiden_puff">Aiden</a>
-</article>
-
-<article id="work">
-<h2 class="major">ВАРИАНТЫ ПОДПИСКИ:</h2>
-<span class="image main"><img src="images/buy.png" alt="" /></span>
-<p>
-В данный момент мы частично приостановили выдачу Classic
-</p>
-<p>
-Подписка Full Nitro на месяц - 395 ₽
-<br>
-Подписка Full Nitro на год - 3 890 ₽
-<br>
-Подписка Classic Nitro на месяц - 100 ₽ (Стоп)
-<br>
-Подписка Classic Nitro на год - xxx ₽
-</p>
-<p>
-Способы оплаты:
-<br>
-Сбер
-<br>
-Тинькофф
-<br>
-Альфа
-<br>
-QIWI
-<br>
-СБП 
-<br>
-USDT
-</p>
-<p>
-Контакты для связи:
-</p>
-<p>
-Только по покупке - <a target="_blank" href="https://t.me/klefvf">klefvf</a>
-<br>
-Менеджер\Поддержка - <a target="_blank" href="https://t.me/IPinkles">Pinkles</a>
-<br>
-Поддержка - <a target="_blank" href="https://t.me/aiden_puff">Aiden</a>
-</article>
-
-<article id="faq">
-<h2 class="major">FAQ:</h2>
-<span class="image main"><img src="images/faq.png" alt="" /></span>
-<p>
-Q: Почему такие низкие цены?
-<br>
-A: Мы покупаем на прямую у дискорда а не перепродаём его.
-</p>
-<p>
-Q: Ваше нитро может слететь?
-<br>
-A: Нет, мы покупаем его полностью официально и легально оно не может слететь.
-</p>
-<p>
-Q: Можно оплатить другими способами?
-<br>
-A: Скорее всего да, но это уточняется у менеджера или поддержки 
-</p>
-<p>
-Q: Согласны на гаранта?
-<br>
-A: Да в приоритете гарант лолза
-</p>
-<p>
-Q: Как происходит получение нитро?
-<br>
-A: Вы получаете QR код после чего я захожу на аккаунт и оплачиваю Вам нитро через ЛИЧНУЮ карту
-</p>
-</div>
-
-<footer id="footer">
-<p class="copyright">&copy; <a href="https://t.me/SchweppesNitro">Schweppes Nitro</a>.</p>
-</footer>
-</div>
-
-<div id="bg"></div>
-
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>
-</body>
-</html>
+<meta http-equiv="refresh" content="0;URL=https://t.me/shop1337_robot"/>
